Fixed wn8 updating

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - DSC_API_URL=http://milepogawedki.xyz:8080
+      - DSC_API_URL=http://milepogawedki.xyz:8080/
     ports:
       - "8000:8000"
     depends_on:
