--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: "3.9"
-   
+
+volumes:
+  static_files:
 services:
   db:
     image: postgres
@@ -13,9 +15,10 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
   web:
     build: .
-    command: python code/manage.py runserver 0:8000
     volumes:
       - .:/code
+      - static_files:/static_files
+    command: bash -c "cd code && gunicorn -w 4 mpsite.wsgi -b 0.0.0.0:8000"
     environment:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
@@ -25,3 +28,12 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  nginx:
+    build:
+      context: .
+      dockerfile: NginxDockerfile
+    volumes:
+      - static_files:/static_files
+    ports:
+      - "80:80"
+
