--- a/django.conf
+++ b/django.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+
+    server_name milepogawedki.xyz;
     access_log  /var/log/nginx/example.log;
     server_tokens off;
 
@@ -11,6 +13,39 @@ server {
 
     location / {
         try_files $uri $uri/ @python_django;
+        return 301 https://milepogawedki.xyz$request_uri;
+    }
+
+    location @python_django {
+        proxy_pass http://web:8000;
+        proxy_pass_request_headers on;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name milepogawedki.xyz;
+
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+
+    access_log  /var/log/nginx/example.log;
+    server_tokens off;
+
+    location /static/ {
+        autoindex off;
+        alias /static_files/;
+    }
+
+    location / {
+        try_files $uri $uri/ @python_django;
+        return 301 https://milepogawedki.xyz$request_uri;
     }
 
     location @python_django {
