--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,14 @@ services:
       dockerfile: NginxDockerfile
     volumes:
       - static_files:/static_files
+      - ./certbot/www:/var/www/certbot/:ro
     ports:
       - "80:80"
+      - "443:443"
+    depends_on:
+      - web
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
 
